--- a/base/static/common.css
+++ b/base/static/common.css
@@ -1,10 +1,143 @@
+.t-mt-3 {
+  margin-top: 0.75rem;
+}
+
+.t-block {
+  display: block;
+}
+
+.t-inline-block {
+  display: inline-block;
+}
+
+.t-inline {
+  display: inline;
+}
+
+.t-flex {
+  display: flex;
+}
+
+.t-grid {
+  display: grid;
+}
+
+.t-h-\[500px\] {
+  height: 500px;
+}
+
+.t-min-h-screen {
+  min-height: 100vh;
+}
+
+.t-w-full {
+  width: 100%;
+}
+
+.t-flex-1 {
+  flex: 1 1 0%;
+}
+
+.t-grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.t-grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.t-grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.t-grid-cols-10 {
+  grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+
+.t-grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.t-flex-col {
+  flex-direction: column;
+}
+
+.t-justify-center {
+  justify-content: center;
+}
+
+.t-gap-\[20px\] {
+  gap: 20px;
+}
+
+.t-gap-\[10px\] {
+  gap: 10px;
+}
+
+.t-gap-\[50px\] {
+  gap: 50px;
+}
+
+.t-gap-\[40px\] {
+  gap: 40px;
+}
+
+.t-gap-\[30px\] {
+  gap: 30px;
+}
+
+.t-bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.t-bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.t-text-center {
+  text-align: center;
+}
+
+.t-text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.t-font-bold {
+  font-weight: 700;
+}
+
 @font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'GmarketSansMedium';
+
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+
+  font-weight: normal;
+
+  font-style: normal;
 }
 
 html > body {
-    font-family:"GmarketSansMedium";
+  font-family:"GmarketSansMedium";
+}
+
+@media (min-width: 640px) {
+  .sm\:t-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:t-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+  @media (min-width: 640px) {
+    .lg\:sm\:t-grid-cols-4 {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
 }
