--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load static %}
+
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -7,21 +8,55 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
-
     <link rel="stylesheet" href="{% static 'common.css' %}">
 </head>
-<body>
+<body class="t-flex t-flex-col t-min-h-screen">
 
 {% if messages %}
 {% for message in messages %}
 <div class="alert alert-{{ message.tags }}">
     {{ message }}
 </div>
+
 {% endfor %}
 {% endif %}
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="http://localhost:8000/products/list/">MEGA MART</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" href="http://localhost:8000/products/list/">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">SHOW</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">SHOW</a>
+          </li>
+        </ul>
+        <form class="nav-item">
+          <a class="nav-link" href="#">LOGIN</a>
+        </form>
+      </div>
+    </div>
+  </nav>
+</header>
 
+<section class="t-flex-1 t-bg-white-500">
 {% block content %}
 {% endblock %}
+</section>
+
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container t-text-center">
+    <span class="text-muted">Footer</span>
+  </div>
+</footer>
 
 </body>
 </html>
