카카오 작업1

--- a/base/static/common.css
+++ b/base/static/common.css
@@ -1,17 +1,61 @@
+*, ::before, ::after {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  --tw-blur: var(--tw-empty,/*!*/ /*!*/);
+  --tw-brightness: var(--tw-empty,/*!*/ /*!*/);
+  --tw-contrast: var(--tw-empty,/*!*/ /*!*/);
+  --tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
+  --tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+  --tw-invert: var(--tw-empty,/*!*/ /*!*/);
+  --tw-saturate: var(--tw-empty,/*!*/ /*!*/);
+  --tw-sepia: var(--tw-empty,/*!*/ /*!*/);
+  --tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
+  --tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.t-relative {
+  position: relative;
+}
+
+.t--z-50 {
+  z-index: -50;
+}
+
+.t-my-\[0px\] {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.t-mt-\[250px\] {
+  margin-top: 250px;
+}
+
+.t-mt-\[30px\] {
+  margin-top: 30px;
+}
+
 .t-mt-3 {
   margin-top: 0.75rem;
 }
 
+.t-mt-2 {
+  margin-top: 0.5rem;
+}
+
+.t-mt-5 {
+  margin-top: 1.25rem;
+}
+
 .t-block {
   display: block;
-}
-
-.t-inline-block {
-  display: inline-block;
-}
-
-.t-inline {
-  display: inline;
 }
 
 .t-flex {
@@ -22,16 +66,20 @@
   display: grid;
 }
 
-.t-h-\[500px\] {
-  height: 500px;
-}
-
 .t-min-h-screen {
   min-height: 100vh;
 }
 
 .t-w-full {
   width: 100%;
+}
+
+.t-max-w-screen-md {
+  max-width: 768px;
+}
+
+.t-max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .t-flex-1 {
@@ -42,24 +90,12 @@
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.t-grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.t-grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.t-grid-cols-10 {
-  grid-template-columns: repeat(10, minmax(0, 1fr));
-}
-
-.t-grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .t-flex-col {
   flex-direction: column;
+}
+
+.t-items-center {
+  align-items: center;
 }
 
 .t-justify-center {
@@ -70,42 +106,83 @@
   gap: 20px;
 }
 
-.t-gap-\[10px\] {
-  gap: 10px;
+.t-overflow-hidden {
+  overflow: hidden;
 }
 
-.t-gap-\[50px\] {
-  gap: 50px;
+.t-whitespace-nowrap {
+  white-space: nowrap;
 }
 
-.t-gap-\[40px\] {
-  gap: 40px;
+.t-rounded {
+  border-radius: 0.25rem;
 }
 
-.t-gap-\[30px\] {
-  gap: 30px;
-}
-
-.t-bg-red-500 {
+.t-bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.t-bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+.t-bg-center {
+  background-position: center;
+}
+
+.t-py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.t-pt-\[56px\] {
+  padding-top: 56px;
+}
+
+.t-pl-\[50rem\] {
+  padding-left: 50rem;
+}
+
+.t-pr-4 {
+  padding-right: 1rem;
 }
 
 .t-text-center {
   text-align: center;
 }
 
-.t-text-\[1\.5rem\] {
-  font-size: 1.5rem;
+.t-text-\[1\.2rem\] {
+  font-size: 1.2rem;
 }
 
 .t-font-bold {
   font-weight: 700;
+}
+
+.t-italic {
+  font-style: italic;
+}
+
+.t-text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.t-text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.t-no-underline {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.t-filter {
+  filter: var(--tw-filter);
+}
+
+.t-transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 @font-face {
@@ -120,6 +197,149 @@
 
 html > body {
   font-family:"GmarketSansMedium";
+}
+
+.before\:t-absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:t-inset-0::before {
+  content: var(--tw-content);
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.before\:t-bg-\[\#00000000\]::before {
+  content: var(--tw-content);
+  background-color: #00000000;
+}
+
+.before\:t-transition-all::before {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.before\:t-content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.after\:t-absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:t-top-\[50\%\]::after {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.after\:t-left-\[50\%\]::after {
+  content: var(--tw-content);
+  left: 50%;
+}
+
+.after\:t-hidden::after {
+  content: var(--tw-content);
+  display: none;
+}
+
+.after\:t-translate-y-\[-50\%\]::after {
+  content: var(--tw-content);
+  --tw-translate-y: -50%;
+  transform: var(--tw-transform);
+}
+
+.after\:t-translate-x-\[-50\%\]::after {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  transform: var(--tw-transform);
+}
+
+.after\:t-whitespace-nowrap::after {
+  content: var(--tw-content);
+  white-space: nowrap;
+}
+
+.after\:t-rounded::after {
+  content: var(--tw-content);
+  border-radius: 0.25rem;
+}
+
+.after\:t-border-2::after {
+  content: var(--tw-content);
+  border-width: 2px;
+}
+
+.after\:t-border-solid::after {
+  content: var(--tw-content);
+  border-style: solid;
+}
+
+.after\:t-border-white::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.after\:t-p-2::after {
+  content: var(--tw-content);
+  padding: 0.5rem;
+}
+
+.after\:t-text-white::after {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.after\:t-no-underline::after {
+  content: var(--tw-content);
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.after\:t-transition-all::after {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.after\:t-content-\[attr\(data-before\)\]::after {
+  --tw-content: attr(data-before);
+  content: var(--tw-content);
+}
+
+.t-group:hover .group-hover\:t-scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: var(--tw-transform);
+}
+
+.t-group:hover .group-hover\:t-text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.t-group:hover .group-hover\:t-underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.t-group:hover .group-hover\:before\:t-bg-\[\#00000055\]::before {
+  content: var(--tw-content);
+  background-color: #00000055;
+}
+
+.t-group:hover .group-hover\:after\:t-block::after {
+  content: var(--tw-content);
+  display: block;
 }
 
 @media (min-width: 640px) {
