--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,18 +2,19 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<section class="section-signup t-flex-1 t-flex t-items-center t-justify-center">
+<section class="section-login t-flex-1 t-flex t-items-center t-justify-center t-mt-[250px]">
     <div class="card t-w-full t-max-w-screen-md mx-4">
-        <div class="card-header">회원가입</div>
+        <div class="card-header">로그인</div>
         <div class="card-body">
             <form method="POST" action="">
                 {% csrf_token %}
                 {% bootstrap_form form %}
-                {% bootstrap_button button_type="submit" content="회원가입" %}
+                {% bootstrap_button button_type="submit" content="로그인" %}
                 {% bootstrap_button button_type="reset" content="취소" %}
             </form>
+            <hr>
+            <a href="{% url 'accounts:kakao_login' %}">카카오로 로그인</a>
         </div>
     </div>
 </section>
-
 {% endblock %}
