--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -1,62 +1,80 @@
 <!doctype html>
 {% load static %}
-
-<html>
+{% load humanize %}
+<html lang="ko" >
 <head>
-    <meta charset="utf-8"/>
-    <title>쇼핑몰</title>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>어썸</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{% static 'common.css' %}">
+    <script defer src="{% static 'common.js' %}"></script>
 </head>
-<body class="t-flex t-flex-col t-min-h-screen">
+
+
+<body bgcolor="while" class="t-flex t-flex-col t-min-h-screen t-pt-[56px] bg-white">
 
 {% if messages %}
 {% for message in messages %}
-<div class="alert alert-{{ message.tags }}">
+<div class="alert alert-{{ message.tags }} t-my-[0px]">
     {{ message }}
 </div>
-
 {% endfor %}
 {% endif %}
-  <!-- Fixed navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="http://localhost:8000/products/list/">MEGA MART</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link" href="http://localhost:8000/products/list/">HOME</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">SHOW</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">SHOW</a>
-          </li>
-        </ul>
-        <form class="nav-item">
-          <a class="nav-link" href="#">LOGIN</a>
-        </form>
-      </div>
-    </div>
-  </nav>
+<header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-lg navbar-white fixed-top bg-while">
+        <div class="container">
+<!--            <a class="navbar-brand text-black" href="{% url 'main' %}">AWESOME</a>-->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse" >
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'products:list' %}"><i class="fas fa-tshirt"></i>상품리스트</a>
+
+                        <!-- 로그인 -->
+                        {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'accounts:logout' %}"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'accounts:login' %}?next={{request.path}}"><i class="fas fa-sign-in-alt"></i> 로그인</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'accounts:signup' %}"><i class="fas fa-user-plus"></i> 회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'accounts:find_username' %}"><i class="fas fa-users"></i> 아이디찾기</a>
+                    </li>
+                </ul>
+                <!-- 로그인end -->
+
+                <form class="d-flex" action="{% url 'products:list' %}">
+                    <input class="form-control me-2" type="search" name="search_keyword" placeholder="상품명을 입력해주세요." aria-label="Search">
+                    <button class="btn btn-outline-success t-whitespace-nowrap" action="search_keyword" type="submit">검색</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 </header>
 
-<section class="t-flex-1 t-bg-white-500">
-{% block content %}
-{% endblock %}
+<section class="t-flex-1 t-py-[20px]">
+    {%block content%}
+    {%endblock%}
 </section>
-
-<footer class="footer mt-auto py-3 bg-light">
-  <div class="container t-text-center">
-    <span class="text-muted">Footer</span>
-  </div>
+<footer class="footer py-3 bg-light">
+    <div class="container t-text-center">
+        <span class="text-muted">AWESOME</span>
+    </div>
 </footer>
-
 </body>
 </html>
